--- a/frontend-origin/css/index.css
+++ b/frontend-origin/css/index.css
@@ -25,6 +25,15 @@ body {
     margin-left: 0.5rem;
 }
 
+#add-form button {
+    width: 20%;
+    cursor: pointer;
+}
+
+#add-form button:active {
+    background-color: #00ffee;
+}
+
 .button:hover {
     cursor: pointer;
     text-decoration: underline;
@@ -53,4 +62,68 @@ body {
     width: 22rem;
     height: 100%;
     left: 0px;
+}
+
+h1 {
+    text-align: center;
+    width: 100%;
+}
+
+.contant-flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.search {
+    width: 100%;
+    box-sizing: 50%;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 4px;
+    background-image: url('searchicon.png');
+}
+
+#add-form input {
+    height: 2rem;
+    margin: 0.5rem;
+    box-sizing: border-box;
+    padding: 12px 12px;
+    resize: vertical;
+    width: 70%;
+}
+
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+    width: 20%;
+}
+
+#add-form input[type=radio] {
+    vertical-align: middle;
+    /* height: 100%; */
+    width: auto;
+    margin: 0px;
+
+}
+
+.length {
+    width: 80%;
+    height: 80%;
+}
+
+.col-25 {
+    width: 20%;
+    /* float: left; */
+}
+
+.col-75 {
+    width: 60%;
+    /* float: left; */
+}
+
+#add-form>* {
+    width: 100%;
+    font-size: 1rem;
 }
