--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +13,36 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  /* display: flex; */
+  height: 100%;
+  width: 100%;
+}
+
+input::placeholder {
+  padding-left: 1rem;
+}
+
+ul > li {
+  margin: 0.25rem 0;
+  padding-left: 2rem;
+  padding-right: 2rem; 
+}
+
+form input {
+  border: solid 0.5px black;
+  border-radius: 1rem;
+}
+
+form input[type=text] {
+  text-indent: 1rem;
 }
