--- a/frontend-origin/css/index.css
+++ b/frontend-origin/css/index.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 html,
@@ -79,8 +80,8 @@ h1 {
 .search {
     width: 100%;
     box-sizing: 50%;
-    border: 2px solid #ccc;
-    border-radius: 4px;
+    /* border: 2px solid #ccc; */
+    /* border-radius: 4px; */
     font-size: 4px;
     background-image: url('searchicon.png');
 }
