--- a/frontend-origin/css/index.css
+++ b/frontend-origin/css/index.css
@@ -4,10 +4,18 @@
     box-sizing: border-box;
 }
 
-html,
+html {
+    height: 100%;
+    width: 100%;
+}
+
 body {
     height: 100%;
     width: 100%;
+}
+
+#content-body {
+    font-size: 1.5rem;
 }
 
 .header {
@@ -15,6 +23,11 @@ body {
     border-bottom: solid 0.5px black;
     /* margin-top: 1rem; */
 
+}
+
+.borderradiu {
+    border-radius: 0.5rem;
+    font-size: 10px;
 }
 
 .button {
